Actualiza api-docs y código autogenerado
